# mouse-os

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/workflows/: mouse-os-design-panel.js
docs/: index.html  mouse-os-tutorial.srt  mouse-os-tutorial.vtt  network-of-opinion.md  onyx-telegram-self-diagnosis.md  web-agent-shopping.md
docs/linear/: issues.md
docs/research/: reolink-cameras-on-ubuntu.md  speech-to-speech.md  web-agent-integration.md
docs/review/: 2026-07-08-adversarial-review-fixes.md
docs/roadmap/: 2026-07-07-feature-roundtable.md
docs/superpowers/specs/: 2026-07-08-mouse-os-v1-design.md
docs/video/: creative-brief.md  shot-board.json
mouseos/: cli.py  config.py  doctor.py  engine.py  feedback.py  grammar.py  intents.py  parser.py
mouseos/inputs/: base.py  repl.py  voice.py
mouseos/pointer/: base.py  detect.py  dummy.py  uinput_abs.py  uinput_rel.py
mouseos/resolve/: screen.py  windows.py
n8n-ultimate-assistant/dev-bridge/: README.md  bridge.py  dev-bridge.service  fix_prompt.md  vps-dev-bridge.service
n8n-ultimate-assistant/scripts/: dev-bridge-tmux.sh  install-dev-bridge-vps.sh  install-dev-bridge.sh
scripts/: setup-uinput.sh
tests/: test_cli_config_doctor.py  test_engine.py  test_feedback.py  test_grammar.py  test_inputs.py  test_parser.py  test_pointer.py  test_review_fixes.py  test_screen.py  test_windows_resolve.py
tools/video/: build.py  build_v.py  falgen.py  overlays.py  overlays_v.py  shot3_light.py
tools/video/tutorial/: build_tutorial.py  narrate.py
