[project]
name = "mouseos"
version = "0.1.0"
description = "Mouse OS — your voice is the pointer. Voice-controlled cursor agent for Ubuntu (Wayland-native, offline, accessibility-first)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "indevilinspace" }]
dependencies = ["evdev>=1.6"]

[project.optional-dependencies]
voice = ["vosk>=0.3.45"]
test = ["pytest>=8"]

[project.scripts]
mouseos = "mouseos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mouseos"]
